--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-/profit-optimization/ @egbendito
-/potencial-yield/ @egbendito
+/datacuration/ @meklitC @masgeek
+/datasourcing/ @meklitC @masgeek @egbendito
